--- a/P4/P4.md
+++ b/P4/P4.md
@@ -167,6 +167,9 @@ Por último, debemos hacer que el script que crea las reglas se ejecute cada vez
 **Archivo rc.local**
 ![16](./Imagenes/10-ejecucion-script-inicio.png)<br>
 
+Una vez hecho esto, la próxima vez que iniciemos el sistema, podremos observar en el arranque, la creación de las tablas:
+
+![17](./Imagenes/creacionReglasSO.png)
 ___
 
 ### 4 - Opcional 1 - Certbot<a name="id4"></a>
